tests/errors/syn.expected-no-default.param-struct.or
main :: () -> void {
    array_t :: struct(size := 10) {
    };
};
